big reorg energy

--- a/example/App.css
+++ b/example/App.css
@@ -1,5 +1,6 @@
 main {
-  text-align: center;
-  vertical-align: center;
-  line-height: 100vh
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
