updated the example

--- a/example/App.css
+++ b/example/App.css
@@ -6,22 +6,22 @@ main {
 }
 
 body {
-	background-color: #1C2333;
-	color: white;
-	font-family: 'IBM Plex Sans', sans-serif;
+  background-color: #1c2333;
+  color: white;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 .center {
-	display: flex;
-	align-items: center;
-	width: 80%;
-	height: 100vh;
+  display: flex;
+  align-items: center;
+  width: 80%;
+  height: 100vh;
 }
 
 .error {
-	color: #E52222
+  color: #e52222;
 }
 
 .heading {
-	font-size: 1.5em;
+  font-size: 1.5em;
 }
