--- a/docs/styles/globals.css
+++ b/docs/styles/globals.css
@@ -1,3 +1,34 @@
+:root {
+  --background-root: #0e1525;
+  --background-default: #1c2333;
+  --background-higher: #2b3245;
+  --background-highest: #3c445c;
+  --background-overlay: #0e1525a0;
+  --foreground-default: #f5f9fc;
+  --foreground-dimmer: #c2c8cc;
+  --foreground-dimmest: #9da2a6;
+  --outline-dimmest: #2b3245;
+  --outline-dimmer: #3c445c;
+  --outline-default: #4e5569;
+  --outline-stronger: #5f677a;
+  --outline-strongest: #70788c;
+  --accent-primary-dimmest: #004182;
+  --accent-primary-dimmer: #0053a6;
+  --accent-primary-default: #0079f2;
+  --accent-primary-stronger: #57abff;
+  --accent-primary-strongest: #b2d9ff;
+  --accent-positive-dimmest: #044a10;
+  --accent-positive-dimmer: #046113;
+  --accent-positive-default: #009118;
+  --accent-positive-stronger: #6cd97e;
+  --accent-positive-strongest: #bfffca;
+  --accent-negative-dimmest: #660000;
+  --accent-negative-dimmer: #a60808;
+  --accent-negative-default: #e52222;
+  --accent-negative-stronger: #ff6666;
+  --accent-negative-strongest: #ffcfcf;
+}
+
 html,
 body {
   padding: 0;
